-> 1.21.1 flavor for version 1.3.0 of the mod -> See related commit of 1.20.1 flavor for more information.